--- a/style.css
+++ b/style.css
@@ -12,3 +12,21 @@ body {
     width: 67.6rem;
     height: 89.9rem;
 }
+.backgrond-green {
+    background-color: #02A28F;
+    color: #FFFFFF;
+}
+#Blog-title {
+    width: 90rem;
+    height: 3rem;
+    margin: 0;
+    padding: 1rem 9.7rem 1rem 10.5rem;
+}
+#Blog-title {
+    font-size: 2.2rem;
+    font-weight: 700;
+    line-height: 100%;
+    letter-spacing: 0;
+    gap: 0.6rem;
+
+}
