--- a/style.css
+++ b/style.css
@@ -22,11 +22,18 @@ body {
     margin: 0;
     padding: 1rem 9.7rem 1rem 10.5rem;
 }
-#Blog-title {
+#Blog-title > h1 {
     font-size: 2.2rem;
     font-weight: 700;
     line-height: 100%;
     letter-spacing: 0;
     gap: 0.6rem;
-
+}
+.Container {
+    width: 46.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 9.6rem;
+    margin-right: 0.75rem;
 }
