--- a/style.css
+++ b/style.css
@@ -90,3 +90,15 @@ body {
 .Grid-right {
     margin: 0 0 0 0.75rem;
 }
+#Grid-post {
+    width: 44.3rem;
+    height: 55.6rem;
+    display: grid;
+    grid-template-columns: 21.8rem 1fr;
+    justify-content: space-between;
+    margin-left: 1rem;
+}
+.Photo {
+    width: 21.56rem;
+    height: 11.9rem;
+}
