--- a/style.css
+++ b/style.css
@@ -102,3 +102,65 @@ body {
     width: 21.56rem;
     height: 11.9rem;
 }
+.Text-post {
+    width: 20.1rem;
+    height: 11.3rem;
+    padding: 0.56rem 1rem 0.56rem 1rem;
+    gap: 0.5rem;    
+}
+.Theme {
+    width: 7.5rem;
+    height: 1.06rem;
+    font-size: 0.75rem;
+    font-weight: 200;
+    letter-spacing: 0;
+    line-height: 100%;
+    color: #02A28F;
+}
+.Text-post > h2 {
+    width: 20rem;
+    height: 1.06rem;
+    font-size: 1.25rem;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 100%;
+    color: #000000;
+}
+.Author {
+    width: 8.75rem;
+    height: 0.9rem;
+    font-size: 0.8rem;
+    font-weight: 200;
+    letter-spacing: 0;
+    line-height: 100%;
+    color: #616161;
+}
+.Author > b {
+    font-size: 0.8rem;
+    font-weight: 700;
+    letter-spacing: 0;
+    line-height: 100%;
+    color: #616161;
+}
+.Argument {
+    width: 20.5rem;
+    height: 3.8rem;
+    text-align: left;
+    font-size: 0.75rem;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 100%;
+    color: #000000;
+}
+.Date {
+    width: 6.75rem;
+    height: 1.06rem;
+    margin-top: 0;
+    margin-bottom: 0;
+    text-align: left;
+    font-size: 0.8rem;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 100%;
+    color: #616161;
+}
