Estilização da id =  Principal, configurando as dimensões e tipo de display; Correção aplicada na id = Grid-recents em uma de suas dimensões

--- a/style.css
+++ b/style.css
@@ -174,5 +174,10 @@ body {
 }
 #Grid-recents {
     width: 25.6rem;
+    height: 23.9rem;
+}
+#Principal {
+    width: 25.6rem;
     height: 18.7rem;
+    display: grid;
 }
