--- a/style.css
+++ b/style.css
@@ -181,3 +181,17 @@ body {
     height: 18.7rem;
     display: grid;
 }
+#Principal-posts {
+    width: 20rem;
+    height: 2.5rem;
+    display: grid;
+    justify-content:left;
+    align-content: center;
+    margin: 0;
+    padding: 0.75rem 4rem 0.75rem 1.5rem;
+    font-size: 1.25rem;
+    border: #FFFFFF;
+    border-radius: 0.6rem;
+    box-shadow: 0 0.6rem 0.6rem 0 #0000001A;
+    gap: 0.6rem;
+}
