--- a/style.css
+++ b/style.css
@@ -207,4 +207,10 @@ body {
     border-radius: 0.6rem;
     box-shadow: 0 0.62rem 0.62rem 0 #0000001A;
 }
-
+.Post > img {
+    width: 8.1rem;
+    height: 4.68rem;
+    align-items: center;
+    padding: 1.25rem 0.8rem 0.75rem 0.87rem;
+    border-radius: 0.62rem;
+}
