--- a/style.css
+++ b/style.css
@@ -214,3 +214,26 @@ body {
     padding: 1.25rem 0.8rem 0.75rem 0.87rem;
     border-radius: 0.62rem;
 }
+.Text {
+    text-align: left;
+}
+.Text > h3 {
+    width: 10.7rem;
+    height: 0.3rem;
+    font-size: 0.87rem;
+    font-weight: 700;
+    line-height: 100%;
+    letter-spacing: 0;  
+    color: #000000;   
+}
+.Text > p {
+    width: 5.75rem;
+    height: 0.9rem;
+    margin-bottom: 2.37rem;
+    padding-top: 0.5rem;
+    font-size: 0.75rem;
+    font-weight: 500;
+    line-height: 100%;
+    letter-spacing: 0;
+    color: #616161;
+}
