--- a/style.css
+++ b/style.css
@@ -237,3 +237,12 @@ body {
     letter-spacing: 0;
     color: #616161;
 }
+#Categories {
+    width: 25.6rem;
+    height: 12.9rem;
+    flex-direction: column;
+    margin-top: 0.68rem;
+    margin-bottom: 0.375rem;
+    border-radius: 0.6rem;
+    gap: 0.8rem;
+}
