--- a/style.css
+++ b/style.css
@@ -246,3 +246,13 @@ body {
     border-radius: 0.6rem;
     gap: 0.8rem;
 }
+#Categori {
+    width: 22.7rem;
+    height: 40px;
+    align-content: center;
+    margin-bottom: 0.5rem;
+    padding: 12px 24px 8px 24px;
+    font-size: 1.25rem;
+    font-weight: 700;
+    gap: 0.62rem;
+}
