--- a/style.css
+++ b/style.css
@@ -290,3 +290,14 @@ body {
     letter-spacing: 0%;
     color: #616161;
 }
+#Footer-pc {
+    width: 90rem;
+    height: 3rem;
+    text-align: center;
+    margin-top: 4rem;
+    padding: 1.06rem 12.5rem 1.06rem 12.5rem;
+    font-size: 0.87rem;
+    font-weight: 600;
+    line-height: 100%;
+    letter-spacing: 0%;
+}
