--- a/style.css
+++ b/style.css
@@ -47,7 +47,6 @@ body {
     padding: 1.5rem 1.5rem 1.5rem 0.93rem;
     border-radius: 0.6rem;
     gap: 0.6rem;
-
 }
 #City2{
     width: 0;
@@ -311,6 +310,7 @@ body {
     height: 0;
     margin: 0;
     padding: 0;
+    font-size: 0;
 }
 
 #Footer-pc {
