--- a/style.css
+++ b/style.css
@@ -324,3 +324,259 @@ body {
     margin-top: 4rem;
     padding: 1.06rem 12.5rem 1.06rem 12.5rem;
 }
+@media only screen and (max-width: 384px) {
+
+    body {
+        margin: 0;
+    }
+    .First-section {
+        display: Grid;
+        width: 24rem;
+        height: 165.6rem;    
+        gap: 1.5rem;
+    }
+    #Blog-title {
+    width: 24rem;
+    height: 4.37rem;
+    gap: 0.62rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 0;
+    padding-right: 0;
+    text-align: center;
+    align-content: center;
+   
+    }
+    #Blog-title > h1 {
+        width: 24rem;
+        height: 1.81rem;
+        font-weight: 700;
+        font-size: 1.5rem;
+        line-height: 100%;
+        letter-spacing: 0%;
+        gap: 0.62rem;
+    }
+    .Container {
+        width: 21.3rem;
+        height: 132.8rem;
+        justify-content: space-between;
+        align-items: center;
+        justify-items: center;
+        gap: 1.5rem;
+        padding: 1.5rem;
+        margin-left: 0;
+        margin-bottom: 1.5rem;
+    }
+    #City1 {
+        width: 0;
+        height: 0;
+        padding: 0;
+        margin: 0;
+    }
+    #City2 {
+        width: 20.5rem;
+        height: 22rem;
+        gap: 0.62rem;
+        border-radius: 0.62rem;
+        margin-left: 0.37rem;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+    }
+    #Post-title {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 19.56rem;
+        height: 1.93rem;
+        font-weight: 700;
+        font-size: 1.12rem;
+        line-height: 100%;
+        letter-spacing: 0%;
+        margin-left: 0.87rem;
+        margin-right: 0;
+        margin-bottom: 0.65rem;
+        padding: 0.5rem 0 0.5rem 1rem;
+    }
+    #Grid-post {
+        display: flex;
+        flex-direction: column;
+        justify-items: center;
+        align-content: center;
+        width: 20.1rem;
+        height: 104.5rem;
+        margin-left: 1rem;
+    }
+    .Grid-item {
+        display: block;
+        width: 20.1rem;
+        height: 25rem;
+    }
+    .Grid-left {
+        margin: 1.5rem 0 0.75rem 0;        
+    }
+    .Grid-right {
+        margin: 1.5rem 0 0.75rem 0;    
+    }
+    .Photo {
+        width: 20.25rem; 
+        height: 11.9rem;
+    }
+    .Second-container {
+        display: grid;
+        flex-direction:row;
+        align-items: center;
+        justify-items: center;
+        align-content: center;
+        width: 20.4rem;
+        height: 40.25rem;
+        margin-top: 0;
+        margin-left: 2.5rem;
+    }
+    #Grid-recents {
+        width: 25.6rem;
+        height: 25.12rem;
+    }
+    #Principal {
+        display: grid;
+        width: 24rem;
+        height: 20.62rem;
+    }
+    #Principal-posts {
+        display: grid;
+        align-content: center;
+        justify-content: center;
+        width: 19.68rem;
+        height: 1.87rem;
+        font-size: 1.25rem;
+        padding: 0.75rem 0 0.75rem 0.75rem;
+        border: #FFFFFF;
+        border-radius: 0.6rem;
+        box-shadow: 0 0.6rem 0.6rem 0 #0000001A;
+        gap: 0.6rem;
+    }
+    .Post {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        width: 20.43rem;
+        height: 5.56rem;
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
+    }
+    .Post > img {
+        width: 8.1rem;
+        height: 4.06rem;
+        align-items: center;
+        padding: 1.25rem 0.75rem 1.25rem 0.5rem;
+        border-radius: 0.62rem;
+    }
+    .Text {
+        width: 10.6rem;
+        height: 5.56rem;
+        text-align: left;
+    }
+    .Text > h3 {
+        width: 10.6rem;
+        height: 1.06rem;
+        font-weight: 700;
+        font-size: 0.86rem;
+        margin-bottom: 0;
+        line-height: 100%;
+        letter-spacing: 0;
+        text-align: start;  
+        color: #000000;   
+    }
+    .Text > p {
+        width: 5.75rem;
+        height: 0.9rem;
+        font-weight: 500;
+        font-size: 0.75rem;
+        padding-top: 0.25rem;
+        margin-top: 0;
+        line-height: 100%;
+        letter-spacing: 0;
+        color: #616161;
+    }
+    #Categories {
+        justify-content: space-between;
+        width: 19.5rem;
+        height: 13.56rem;
+        margin-right: 6.25rem;
+        border-radius: 0.6rem;
+        gap: 0.8rem;
+    }
+    #Categori {
+        width: 0;
+        height: 0;
+        margin: 0;
+        padding: 0;
+        font-size: 0;
+    }
+    #Ktegori {
+        display: grid;
+        flex-direction: row;
+        width: 19.65rem;
+        height: 1.87rem;
+        font-size: 1.25rem;
+        font-weight: 700;
+        text-align: center;
+        border-radius: 0.62rem;
+        margin-bottom: 1.12rem;
+        padding: 0.75rem 0 0.75rem 0.75rem;
+        gap: 0.62rem;
+    }
+    .Types {
+        width: 20.6rem;
+        height: 1.25rem;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding-top: 0.75rem;
+        
+    }
+    .Option {
+        width: 4.43rem;
+        height: 1.25rem;
+        font-weight: 600;
+        font-size: 1rem;
+        line-height: 100%;
+        letter-spacing: 0%;
+        padding-top: 0.25rem;
+        padding-bottom: 0.25rem;
+        color: #616161;
+    }
+    .Number {
+        width: 1.32rem;
+        height: 1.25rem;
+        justify-content: space-between;
+        font-weight: 600;
+        font-size: 1rem;
+        line-height: 100%;
+        margin-top: 0.75rem;
+        margin-bottom: 0.75rem;
+        padding-top: 0.25rem;
+        padding-bottom: 0.25rem;
+        letter-spacing: 0%;
+        color: #616161;
+    }
+    #Footer-pc {
+        width: 0;
+        height: 0;
+        margin: 0;
+        padding: 0;
+        font-size: 0;
+    }
+    #Footer-mobile {
+        width: 24rem;
+        height: 3rem;
+        justify-content: space-between;
+        text-align: center;
+        padding-top: 1.06rem;
+        padding-right: 1.25rem;
+        padding-bottom: 1.06rem;
+        padding-left: 1.25rem;
+        font-weight: 600;
+        font-size: 0.87rem;
+    }
+}
