--- a/style.css
+++ b/style.css
@@ -331,12 +331,12 @@ body {
     }
     .First-section {
         display: Grid;
-        width: 24rem;
+        width: 25.75rem;
         height: 165.6rem;    
         gap: 1.5rem;
     }
     #Blog-title {
-    width: 24rem;
+    width: 28.25rem;
     height: 4.37rem;
     gap: 0.62rem;
     padding-top: 1rem;
@@ -348,7 +348,7 @@ body {
    
     }
     #Blog-title > h1 {
-        width: 24rem;
+        width: 25.75rem;
         height: 1.81rem;
         font-weight: 700;
         font-size: 1.5rem;
@@ -374,26 +374,29 @@ body {
         margin: 0;
     }
     #City2 {
-        width: 20.5rem;
+        width: 22.75rem;
         height: 22rem;
         gap: 0.62rem;
         border-radius: 0.62rem;
-        margin-left: 0.37rem;
+        margin-left: 4.06rem;
         padding-left: 0.5rem;
         padding-right: 0.5rem;
+    }
+    #Posts-lists {
+        margin-left: 3.93rem;
     }
     #Post-title {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        width: 19.56rem;
+        width: 21.9rem;
         height: 1.93rem;
         font-weight: 700;
         font-size: 1.12rem;
         line-height: 100%;
         letter-spacing: 0%;
         margin-left: 0.87rem;
-        margin-right: 0;
+        margin-right: 0.62rem;
         margin-bottom: 0.65rem;
         padding: 0.5rem 0 0.5rem 1rem;
     }
@@ -402,13 +405,13 @@ body {
         flex-direction: column;
         justify-items: center;
         align-content: center;
-        width: 20.1rem;
+        width: 22.75rem;
         height: 104.5rem;
         margin-left: 1rem;
     }
     .Grid-item {
         display: block;
-        width: 20.1rem;
+        width: 22.75rem;
         height: 25rem;
     }
     .Grid-left {
@@ -418,7 +421,7 @@ body {
         margin: 1.5rem 0 0.75rem 0;    
     }
     .Photo {
-        width: 20.25rem; 
+        width: 22.75rem; 
         height: 11.9rem;
     }
     .Second-container {
@@ -427,25 +430,26 @@ body {
         align-items: center;
         justify-items: center;
         align-content: center;
-        width: 20.4rem;
+        width: 22.75rem;
         height: 40.25rem;
         margin-top: 0;
-        margin-left: 2.5rem;
+        margin-left: 2.81rem;
     }
     #Grid-recents {
-        width: 25.6rem;
+        width: 25.75rem;
         height: 25.12rem;
+        margin-right: 2.93rem;
     }
     #Principal {
         display: grid;
-        width: 24rem;
+        width: 23rem;
         height: 20.62rem;
     }
     #Principal-posts {
         display: grid;
         align-content: center;
         justify-content: center;
-        width: 19.68rem;
+        width: 22.31rem;
         height: 1.87rem;
         font-size: 1.25rem;
         padding: 0.75rem 0 0.75rem 0.75rem;
@@ -458,7 +462,7 @@ body {
         display: flex;
         flex-direction: row;
         align-items: center;
-        width: 20.43rem;
+        width: 23rem;
         height: 5.56rem;
         padding-top: 0.5rem;
         padding-bottom: 0.5rem;
@@ -499,7 +503,7 @@ body {
     }
     #Categories {
         justify-content: space-between;
-        width: 19.5rem;
+        width: 22.43rem;
         height: 13.56rem;
         margin-right: 6.25rem;
         border-radius: 0.6rem;
@@ -515,7 +519,7 @@ body {
     #Ktegori {
         display: grid;
         flex-direction: row;
-        width: 19.65rem;
+        width: 22.43rem;
         height: 1.87rem;
         font-size: 1.25rem;
         font-weight: 700;
@@ -526,7 +530,7 @@ body {
         gap: 0.62rem;
     }
     .Types {
-        width: 20.6rem;
+        width: 23.37rem;
         height: 1.25rem;
         display: flex;
         flex-direction: row;
@@ -568,7 +572,7 @@ body {
         font-size: 0;
     }
     #Footer-mobile {
-        width: 24rem;
+        width: 25.75rem;
         height: 3rem;
         justify-content: space-between;
         text-align: center;
